Dressed up the page a little, per the exercise.

--- a/lesson1/exercises/src/app/fav-photos/fav-photos.component.css
+++ b/lesson1/exercises/src/app/fav-photos/fav-photos.component.css
@@ -3,9 +3,18 @@ h3 {
 }
 
 img {
-
+   height: 350px;
+   padding: 12px;
 }
 
 .photos {
    text-align: center;
+}
+
+td {
+   border: dotted black;
+}
+
+table {
+   margin: auto;
 }
