--- a/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
+++ b/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
@@ -1,6 +1,10 @@
 <div class="photos">
    <h3>{{photosTitle}}</h3>
-   <img src="{{image1}}" alt="Oops! Missing photo!"> 
-   <img src="" alt="Oops! Missing photo!">  <br>
-   <img src="" alt="Oops! Missing photo!"> 
+   <table>
+      <tr>
+         <td><img src={{image1}} alt="Oops! Missing photo!"></td>
+         <td><img src="{{image2}}" alt="Oops! Missing photo!"></td>
+         <td><img src="{{image3}}" alt="Oops! Missing photo!"></td>
+      </tr>
+   </table>
 </div>
