--- a/lesson1/exercises/src/app/movie-list/movie-list.component.css
+++ b/lesson1/exercises/src/app/movie-list/movie-list.component.css
@@ -1,5 +1,5 @@
 .movies {
-    color: green;
+    color: rgb(226, 4, 4);
 }
 
 h3 {
@@ -7,5 +7,5 @@ h3 {
 }
 
 li {
-    font-size: 2.4vw;
+    font-size: 2vw;
 }
