--- a/lesson1/exercises/src/styles.css
+++ b/lesson1/exercises/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-image: linear-gradient(rgba(205, 205, 205, 0.6), rgba(205, 205, 205, 0.6)), url("./assets/SchoolOfAthens.jpg");
+    background-size: cover;
+}
