--- a/lesson1/exercises/src/app/fav-links/fav-links.component.html
+++ b/lesson1/exercises/src/app/fav-links/fav-links.component.html
@@ -1,12 +1,6 @@
-<div><a href="{{favLinks[0]}}" target="_blank">
-        Wolfram Mathworld
+<div *ngFor="let link of favLinks">
+    <a href="{{link[0]}}" target="_blank">
+        {{link[1]}}
     </a>
     <br>
-    <a href="{{favLinks[1]}}" target="_blank">
-        SOS Math Trigonometric Identities
-    </a>
-    <br>
-    <a href="{{favLinks[2]}}" target="_blank">
-        D&D Beyond
-    </a>
 </div>
