--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -1,14 +1,32 @@
 <div class="chores">
     <h3>Chores</h3>
     <ul>
-        <li *ngFor = 'let chore of chores'>{{chore}}</li>
+        <li *ngFor='let chore of chores'>{{chore}}</li>
     </ul>
+    <p id="admonishment" *ngIf="chores.length > finishedChores.length">Work harder!</p>
 </div>
 <hr>
 <div class="doneChores">
     <h3>Done Chores</h3>
     <ul>
-        <li *ngFor = 'let done of finishedChores'>{{done}}</li>
+        <li *ngFor='let done of finishedChores'>{{done}}</li>
     </ul>
+    <img *ngIf="chores.length === 0 || finishedChores.length - chores.length >= 3;
+     else incentive" src="{{targetImage}}" />
+    <ng-template #incentive>
+        <p>No allowance yet.</p>
+    </ng-template>
 </div>
 <hr>
+<h1 *ngIf="chores.length === 0 && finishedChores.length >= 4; else iceCreamInstructions">
+    Ice cream treat!
+</h1>
+<ng-template #iceCreamInstructions>
+    <h3>Here is how to earn ice cream.</h3>
+    <p>
+        Complete all chores, so that the chores list is empty, AND...
+    </p>
+    <p>
+        Complete at least four chores, so that the finished chores list contains at least four items.
+    </p>
+</ng-template>
